--- a/src/layouts/Introduction.astro
+++ b/src/layouts/Introduction.astro
@@ -1,38 +1,29 @@
 ---
-import {Icon} from "astro-icon"
 import {Image} from "@astrojs/image/components";
 import profile from "../../public/assets/profile.jpg";
 ---
 
 <!-- introduction page -->
-<div class="px-8">
-
-<div class="flex mt-24 ">
-  <div class="w-">
-    <div class="flex space-x-4 items-center">
-    <Image src={profile} alt="lekan" class="w-32 mb-4 rounded-md" />
-    <div>
-      <h1 class="font-bold text-xl tracking-wider">Olalekan Adekanmbi</h1>
-      <p>Fullstack software engineer</p>
-    </div>
-    </div>
-    <h1 class="font-Roboto text-lg leading-relaxed">Hi,</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores aliquid recusandae nostrum porro reprehenderit id? Minima a consectetur, culpa consequatur maxime quam deserunt eaque ea explicabo, numquam eum, laborum ad. Eius harum corrupti ex. Saepe delectus eveniet aut doloremque tempora?</p>
-  </div>
-  <!-- my picture here -->
-  <div />
-</div>
-<!-- contact page -->
 <div>
-  <h1 class="font-Roboto text-lg leading-relaxed mt-4 font-semibold">Contact me</h1>
-  <div>
-  <!-- Email component  -->
-  <p><span class="tracking-widest">---</span> or <span class="tracking-widest">---</span></p>
-  <div class="flex space-x-4">
-    <Icon pack="mdi" name="twitter" class="w-8" />
-    <Icon pack="mdi" name="github" class="w-8"  />
-    <Icon pack="mdi" name="linkedin" class="w-8"  />
+  <div class="flex">
+    <div class="md:flex flex-row-reverse">
+      <div class="flex space-x-4 items-center md:w-1/3 md:flex-col">
+          <Image src={profile} alt="lekan" class="w-32 mb-4 rounded-md" />
+          <div class="md:hidden">
+            <h1 class="font-bold text-xl tracking-wider">Olalekan Adekanmbi</h1>
+            <p>Fullstack software engineer</p>
+          </div>
+      </div>
+      <div class="md:w-2/3">
+          <div class="hidden md:block mb-6">
+            <h1 class="font-bold text-xl tracking-wider">Olalekan Adekanmbi</h1>
+            <p>Fullstack software engineer</p>
+          </div>
+          <h1 class="font-Roboto text-lg leading-relaxed mb-4">Hi,</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores aliquid recusandae nostrum porro reprehenderit id? Minima a consectetur, culpa consequatur maxime quam deserunt eaque ea explicabo, numquam eum, laborum ad. Eius harum corrupti ex. Saepe delectus eveniet aut doloremque tempora?</p>
+      </div>
+    </div>
+    <!-- my picture here -->
+    <div />
   </div>
-  </div>
-</div>
 </div>
