--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -1,4 +1,7 @@
-<nav class="fixed top-0 left-0 right-0 h-16 w-screen px-8 flex justify-between items-center backdrop-blur-0 bg-slate-300">
+<nav class="fixed top-0 left-0 right-0 h-16 w-screen backdrop-blur-sm bg-white/30 flex items-center ">
+
+<div class="w-full max-w-[1000px] px-4 mx-auto space-y-12 ">
   <!-- header -->
   <div><h1 class="font-bold text-xl font-Source_Sans_Pro tracking-wider">Olalekan</h1></div>
+</div>
 </nav>
