--- a/src/layouts/Contact.astro
+++ b/src/layouts/Contact.astro
@@ -3,7 +3,7 @@ import {Icon} from "astro-icon"
 import Email from "../components/Email.astro";
 ---
 <div class="pb-20">
-  <h1 class="font-Roboto text-lg leading-relaxed mt-4 font-semibold">Contact me</h1>
+  <h1 class="text-lg leading-relaxed mt-4 font-semibold">Contact me</h1>
   <div class="space-y-2 mt-2">
     <Email />
   <p><span class="tracking-widest">---</span> or <span class="tracking-widest">---</span></p>
