--- a/src/layouts/Introduction.astro
+++ b/src/layouts/Introduction.astro
@@ -10,16 +10,16 @@ import profile from "../../public/assets/profile.jpg";
       <div class="flex space-x-4 items-center md:w-1/3 md:flex-col">
           <Image src={profile} alt="lekan" class="w-32 mb-4 rounded-md" />
           <div class="md:hidden">
-            <h1 class="font-bold text-xl tracking-wider">Olalekan Adekanmbi</h1>
+            <h1 class="font-bold text-xl">Olalekan Adekanmbi</h1>
             <p>Fullstack software engineer</p>
           </div>
       </div>
       <div class="md:w-2/3">
           <div class="hidden md:block mb-6">
-            <h1 class="font-bold text-xl tracking-wider">Olalekan Adekanmbi</h1>
+            <h1 class="font-bold text-xl">Olalekan Adekanmbi</h1>
             <p>Fullstack software engineer</p>
           </div>
-          <h1 class="font-Roboto text-lg leading-relaxed mb-4">Hi,</h1>
+          <h1 class="text-lg leading-relaxed mb-4">Hi,</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores aliquid recusandae nostrum porro reprehenderit id? Minima a consectetur, culpa consequatur maxime quam deserunt eaque ea explicabo, numquam eum, laborum ad. Eius harum corrupti ex. Saepe delectus eveniet aut doloremque tempora?</p>
       </div>
     </div>
