--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -2,6 +2,6 @@
 
 <div class="w-full max-w-[1000px] px-4 mx-auto space-y-12 ">
   <!-- header -->
-  <div><h1 class="font-bold text-xl font-Source_Sans_Pro tracking-wider">Olalekan</h1></div>
+  <div><h1 class="font-bold text-xl">Olalekan</h1></div>
 </div>
 </nav>
