--- a/src/layouts/Projects.astro
+++ b/src/layouts/Projects.astro
@@ -2,13 +2,24 @@
 ---
 
 <div>
-  <h1 class="font-Roboto text-lg leading-relaxed font-semibold mb-16">Projects</h1>
+  <h1 class="text-lg leading-relaxed font-semibold mb-16">Projects</h1>
   <div class="flex space-y-8 flex-col">
     <div class="md:flex space-x-0 md:space-x-4 items-center">
       <div class="w-full md:w-1/2 h-[200px] md:h-[500px] rounded-md bg-pink-300 mb-4 md:mb-0" />
       <div class="md:w-1/2 md:space-y-4">
-        <h1 class="font-Montserrat leading-7 text-zinc-400">Algrora.shop</h1>
-        <p class="font-medium text-2xl font-Montserrat">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, distinctio.</p>
+        <h1 class="leading-7 text-zinc-400">Algrora.shop</h1>
+        <p class="font-medium text-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, distinctio.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quod id ab perspiciatis enim voluptas ad officia molestias perferendis, iure quaerat alias, numquam maxime ipsa. Eum, hic. Commodi, illo. Labore?</p>
+        <div class="space-x-4 mt-4 flex items-center">
+          <a class="px-4 py-2 rounded-md border-2 cursor-pointer bg-pink-800 text-white active:bg-pink-700 block capitalize">View repo</a>
+          <a class="text-pink-800 cursor-pointer block capitalize">View live site</a>
+        </div>
+      </div>
+    </div>
+    <div class="md:flex space-x-0 md:space-x-4 ">
+      <div class="w-full h-[200px] max-w-[300px] rounded-md bg-pink-300 mb-4" />
+      <div>
+        <h1 class="font-bold leading-7">Algrora.shop</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quod id ab perspiciatis enim voluptas ad officia molestias perferendis, iure quaerat alias, numquam maxime ipsa. Eum, hic. Commodi, illo. Labore?</p>
         <div class="space-x-4 mt-4 flex items-center">
           <a class="px-4 py-2 rounded-md border-2 cursor-pointer bg-pink-800 text-white active:bg-pink-700 block">View repo</a>
@@ -19,18 +30,7 @@
     <div class="md:flex space-x-0 md:space-x-4 ">
       <div class="w-full h-[200px] max-w-[300px] rounded-md bg-pink-300 mb-4" />
       <div>
-        <h1 class="font-bold font-Montserrat leading-7">Algrora.shop</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quod id ab perspiciatis enim voluptas ad officia molestias perferendis, iure quaerat alias, numquam maxime ipsa. Eum, hic. Commodi, illo. Labore?</p>
-        <div class="space-x-4 mt-4 flex items-center">
-          <a class="px-4 py-2 rounded-md border-2 cursor-pointer bg-pink-800 text-white active:bg-pink-700 block">View repo</a>
-          <a class="text-pink-800 cursor-pointer block">View live site</a>
-        </div>
-      </div>
-    </div>
-    <div class="md:flex space-x-0 md:space-x-4 ">
-      <div class="w-full h-[200px] max-w-[300px] rounded-md bg-pink-300 mb-4" />
-      <div>
-        <h1 class="font-bold font-Montserrat leading-7">Algrora.shop</h1>
+        <h1 class="font-bold leading-7">Algrora.shop</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quod id ab perspiciatis enim voluptas ad officia molestias perferendis, iure quaerat alias, numquam maxime ipsa. Eum, hic. Commodi, illo. Labore?</p>
         <div class="space-x-4 mt-4 flex items-center">
           <a class="px-4 py-2 rounded-md border-2 cursor-pointer bg-pink-800 text-white active:bg-pink-700 block">View repo</a>
